# flask-cicd-pipeline

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
aheflask/: __main__.py  aheflask.py  code.py
aheflask/templates/: credentials.html  home.html  layout.html  time.html
test/: test_code.py
webapp/: app.py  code.py
webapp/templates/: gallery.html  layout.html  main.html  time.html
